@@ -3,16 +3,12 @@ package com.example.WatchShop.model.dto.res;
 import com.example.WatchShop.model.Images;
 import com.example.WatchShop.model.Products;
 import lombok.AllArgsConstructor;
-import lombok.Getter;
+import lombok.Data;
 import lombok.NoArgsConstructor;
-import lombok.Setter;
 
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
-@Getter
-@Setter
+@Data
 @AllArgsConstructor
 @NoArgsConstructor
 public class ProductResDTO {
@@ -20,13 +16,16 @@ public class ProductResDTO {
     private String name;
     private Double price;
     private Double star;
-
     private List<String> imageSource;
 
-    public ProductResDTO(Products product) {
-        this.id = product.getId();
-        this.name = product.getName();
-        this.price = product.getPrice();
-        this.imageSource = product.getImages().stream().map(Images::getSource).collect(Collectors.toList());
-    }
+  public ProductResDTO(Products product) {
+    this.id = product.getId();
+    this.name = product.getName();
+    this.price = product.getPrice();
+    this.imageSource = product
+        .getImages()
+        .stream()
+        .map(Images::getSource)
+        .toList();
+  }
 }
